test/error/ast/PrivateDeclProvider.mod
MODULE PrivateDeclProvider;
PROCEDURE Hidden;
END Hidden;
END PrivateDeclProvider.
